Completed notes for understanding modules topic
- Completed notes for understanding modules
- Added code samples in examples dir for requires and requires static
  directives